test/fails/bad_types/mat_norm.lgl
mat2x2 m = [[2., 3.], [3., 2.]];
print (normalize m);